--- a/.github/workflows/continuous_deployment.yml
+++ b/.github/workflows/continuous_deployment.yml
@@ -1,8 +1,7 @@
-# in .github/workflows/continuous_deployment.yml
 name: Continuous deployment
 on:
   workflow_run:
-    branches: [master]
+    branches: [main]
     workflows: [Continuous integration]
     types: [completed]
 
@@ -20,10 +19,10 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - run: trunk build --release
+      - run: trunk build --release --public-url /${{ github.event.repository.name }}/
 
       - uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         with:
-          github_token: $
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
